--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
+    "fs-extra": "^10.0.0",
+    "gray-matter": "^4.0.3",
+    "mdx-prism": "^0.3.4",
+    "next-mdx-remote": "^3.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "remark-code-titles": "^0.1.2",
     "remix": "^1.1.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.3",
+    "@types/fs-extra": "^9.0.13",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.2",
