--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "gray-matter": "^4.0.3",
     "mdx-prism": "^0.3.4",
     "next-mdx-remote": "^3.0.8",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-truncate": "^2.4.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "remark-code-titles": "^0.1.2",
@@ -30,8 +32,10 @@
   "devDependencies": {
     "@remix-run/dev": "^1.1.3",
     "@types/fs-extra": "^9.0.13",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/react-truncate": "^2.3.4",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
     "postcss": "^8.4.5",
