--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
+    "axios": "^0.25.0",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "mdx-prism": "^0.3.4",
