--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "postinstall": "remix setup node"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.3.1",
     "@nextui-org/react": "^1.0.2-beta.3",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
     "axios": "^0.25.0",
+    "firebase": "^9.6.6",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
+    "mdx-mermaid": "^1.2.1",
     "mdx-prism": "^0.3.4",
+    "mermaid": "^8.14.0",
     "next-mdx-remote": "^3.0.8",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
