--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "6.0.0",
     "react-redux": "^7.2.6",
     "react-truncate": "^2.4.0",
     "redux": "^4.1.2",
