--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@remix-run/serve": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
     "axios": "^0.25.0",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.6",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "mdx-mermaid": "^1.2.1",
     "mdx-prism": "^0.3.4",
     "mermaid": "^8.14.0",
+    "moment": "^2.29.1",
     "next-mdx-remote": "^3.0.8",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
